--- a/website/templates/website/feedback.html
+++ b/website/templates/website/feedback.html
@@ -1,9 +1,21 @@
 {% extends 'website/base.html' %}
 {% block content %}
 {% load static %}
+<style>
+        .page-banner.bg-image {
+            background-image: url('/static/images/partners/partners.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        .pt-130 {
+            padding-top: 130px;
+        }
+        .pb-130 {
+            padding-bottom: 130px;
+        }
+</style>
+<main>
 
-
-
-
-
+</main>
 {% endblock %}
