--- a/website/templates/website/shared/footer.html
+++ b/website/templates/website/shared/footer.html
@@ -63,9 +63,9 @@
                                 <span class="footer__item-title-line2"></span>
                             </div>
                             <ul>
-                                <li class="pb-3"><a href="#0"><i class="fa-solid fa-location-dot pe-1 primary-color"></i> Westport Industrial City</a></li>
-                                <li class="pb-3"><a href="tel:+4065550120"><i class="fa-solid fa-phone-volume pe-1 primary-color"></i> (254) 712-345-678</a></li>
-                                <li><a href="#0"><i class="fa-solid fa-envelope pe-1 primary-color"></i> info@greenai.com</a></li>
+                                <li class="pb-3"><a href="https://www.google.com/maps/place/Westport+industrial+city/@-1.1898108,37.0110512,15z/data=!4m6!3m5!1s0x182f41a890940aa5:0x98076bdf992cc79!8m2!3d-1.1898108!4d37.0110512!16s%2Fg%2F11txh22yrd?entry=ttu"><i class="fa-solid fa-location-dot pe-1 primary-color"></i> Westport Industrial City</a></li>
+                                <li class="pb-3"><a href="tel:+254712345678"><i class="fa-solid fa-phone-volume pe-1 primary-color"></i> (254) 712-345-678</a></li>
+                                <li><a href="mailto:info@greenai.com"><i class="fa-solid fa-envelope pe-1 primary-color"></i> info@greenai.com</a></li>
                             </ul>
                         </div>
                     </div>
